exports[`GetReplyAndGetArticle GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replyConnections": Array [
        Object {
          "id": "foo-bar",
          "reply": Object {
            "versions": Array [
              Object {
                "reference": "barbar",
                "text": "bar",
                "type": "NOT_ARTICLE",
              },
            ],
          },
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 1,
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "replyConnections": Array [
        Object {
          "article": Object {
            "text": "Lorum ipsum",
          },
        },
      ],
      "versions": Array [
        Object {
          "reference": "barbar",
          "text": "bar",
          "type": "NOT_ARTICLE",
        },
      ],
    },
  },
}
`;

exports[`relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJhcnRpY2xlcyNmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WyJhcnRpY2xlcyNmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJhcnRpY2xlcyNmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WyJhcnRpY2xlcyNmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuMzU5NzE3MjIsImFydGljbGVzI2ZvbzMiXQ==",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WzAuMzY3MjExMywiYXJ0aWNsZXMjZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;
